test/fails/bad_tags/decl5.lgl
void main() {
    tag a is vec2;
    tag b is a;
    tag a is b;  // Cannot redeclare tags / cannot create a loop
}